--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Mario Laureano. It uses data from mapbox.com and weatherstack.com</p>
         <img class="portrait" src="/Images/circa.jpg">
     </div>
     {{>footer}}
